[package]
name = "semantic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.61"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clickhouse = "0.12.1"
axum = { version = "0.8.1", features = ["macros"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.5", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
toml = "0.8.13"
notify = "6.1.1"
jsonwebtoken = "9.3.1"

